Revision history for Hailo

{{$NEXT}}

    - Scrap the "normal word" matching constraint from the previous release.
      It was failing to match words like "4.1GB", causing an infinite loop.
      Instead, we now assign different spacing attributes to components of
      conjoined words of varying types (e.g. recognizing that "4.1GB" is a
      normal word ("4.1") followed by a postfix ("GB").

0.54 2010-10-16 10:10:19

    - Fix the previously broken `save_on_exit' so that it does what
      it's supposed to do.

      The `save_on_exit' option in Hailo.pm never worked, and nor did
      hailo's corresponding --autosave option. Fixed that by
      correcting some method name confusion, and solved a BUG by
      finally adding a test for this option.

0.53 2010-10-15 21:29:02

    - hailo command: Fix off-by-one error when reporting the number of lines
      learned when training.

    - Don't truncate the brain file after loading it with in_memory enabled.

    - Word tokenizer improvements:
      * Recognize "´" as an apostrophe when matching words.
      * Recognize a compound word like "anti-scientology" as a single word.
      * Put additional constraints on where a "normal word" can be matched.
        This enables it to match things like "3D" and "800x600" as single
        words.
      * Fix capitalization of words after sentences which end with dashed
        words like "anti-scientology".
      * Convert chunks to ASCII before looking for a URI to work around a
        limitation in Regexp::Common.
      * Recognize ssh:// (and foo+ssh://) URIs.

0.52 2010-07-18 22:40:02

    - Hailo no longer passes references to itself to its slave
      classes, so it's garbage collected at the right time.

      This bug broke the hybrid disk <-> in_memory SQLite mode, it's
      now fixed again. The test that was supposed to check whether the
      hybrid in-memory backend worked did the opposite of what it was